--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "socket.io": "^4.8.0",
-    "cors": "^2.8.5",
-    "@supabase/supabase-js": "^2.87.1"
+    "socket.io": "^4.8.0"
   }
 }
